# testing

./: .gitignore  .hello.swo  .hello.swp  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  ChangeLog  LICENSE  Makefile  README.md  README.rst  bla-bla  blabla.txt  ceva.txt  code_and_go.py  cuib.py  database.txt  event.txt  fb-hacker.py  gigi_petrolieru.txt  hello  hello_world  inca_un_fisier.txt  receiver.py  receiver_json.py  requirements.txt  requirements_dev.txt  sender.py  sender_json.py  setup.cfg  setup.py  sobolan.c  sobolan.py  sobolan_ezoteric.txt  test-requirements.txt  testt  testt.orig  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yaml
animale/: sobolan.py
docker/client/: Dockerfile
docker/worker/: Dockerfile
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
find-me/school/: solution
sobolanism/: __init__.py  cli.py  exception.py
sobolanism/cmd/: args.py  client.py  worker.py
sobolanism/compute/: fib.py
sobolanism/rpc/: client.py  fibrpcapi.py  worker.py
testing/: config.py  rpc_utils.py  rpcapi.py
tests/: __init__.py  test_sobolan.py  test_sobolanism.py
tests/unit/compute/: test_fib.py
tests/unit/rpc/: test_worker.py
