[metadata]
name = testing
summary = Liga AC Labs practice
description-file =
    README.md
author = Claudiu Belu
author-email = some@email.com
home-page = http://github.com/bclau/testing
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    testing
