[metadata]
name = sobolanism
summary = Project created to show the awesomeness of Python Projects.
description_file =
    README.rst
author = Claudiu Belu
author_email = cbelu@cloudbasesolutions.com
url = https://github.com/claudiubelu/sobolanism
project_urls =
    Bug Tracker = https://github.com/claudiubelu/sobolanism/issues
    Source Code = https://github.com/claudiubelu/sobolanism
python_requires = >=3.7
version = 0.1.0
license = MIT license
keywords = sobolanism
include_package_data = True
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[entry_points]
console_scripts =
    sobolanism = sobolanism.cli:main
    sobolanism-worker = sobolanism.cmd.worker:main
    sobolanism-client = sobolanism.cmd.client:main

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:sobolanism/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 88
exclude = docs
